--- a/assets/css/actividades/nueva.css
+++ b/assets/css/actividades/nueva.css
@@ -1,27 +1,40 @@
 @charset "utf-8";
+
 /* CSS Document */
-body{font-size:12px;}
-.error { display: block; }
- 
- .btn-editar{     width: 5px;
+
+#nueva_actividad {
+    font-size: 12px;
+}
+
+#nueva_actividad .error {
+    display: block;
+}
+
+#nueva_actividad .btn-editar {
+    width: 5px;
     font-size: 9px;
     float: left;
     /* margin-right: 2px; */
     padding: 1px 7px 1px 1px;
-    /* padding-left: 1px; */}
- 
- label{margin-top:5px;}
- 
- .vertical-centered-text {
-  height: 200px;
-  display: table;
+    /* padding-left: 1px; */
 }
-  .vertical-centered-text > * {
+
+#nueva_actividad label {
+    margin-top: 5px;
+}
+
+#nueva_actividad .vertical-centered-text {
+    height: 200px;
+    display: table;
+}
+
+#nueva_actividad .vertical-centered-text>* {
     display: table-cell;
     vertical-align: middle;
-  }
-  .eliminar{
-  background-image: url(http://www.stadioitalianodiconcepcion.cl/ASI/assets/images/eliminar.png);
+}
+
+#nueva_actividad .eliminar {
+    background-image: url(http://www.stadioitalianodiconcepcion.cl/ASI/assets/images/eliminar.png);
     background-repeat: no-repeat;
     height: 10px;
     width: 10px;
@@ -30,10 +43,10 @@ body{font-size:12px;}
     background-color: transparent;
     border: none;
     margin-top: 5px;
-
 }
-    .editar{
-  background-image: url(http://www.stadioitalianodiconcepcion.cl/ASI/assets/images/edit.png);
+
+#nueva_actividad .editar {
+    background-image: url(http://www.stadioitalianodiconcepcion.cl/ASI/assets/images/edit.png);
     background-repeat: no-repeat;
     height: 20px;
     width: 17px;
@@ -42,49 +55,81 @@ body{font-size:12px;}
     background-color: transparent;
     border: none;
     margin-top: 5px;
-
 }
 
-#number{
-	width:100px;
-	
-	}
-	
-	
-	
-	#example{font-size:11px; text-transform:uppercase;}
+#nueva_actividad #number {
+    width: 100px;
+}
+
+#nueva_actividad #example {
+    font-size: 11px;
+    text-transform: uppercase;
+}
+
+
 /*pegado*/
 
-
-#div-nuevo{ transition: opacity 1s ease-out;}
-.row-turnos{ 
-  
-  margin: 5px;
-  text-transform: uppercase;
-  font-size: 11px;
-  padding: 0px 0px 5px 0px;
+#nueva_actividad #div-nuevo {
+    transition: opacity 1s ease-out;
 }
-.cont-turnos{  /*background: red;*/  
-  padding: 0px;border-bottom: 1px solid #c7c7c7; 
-     font-size: 12px;
+
+#nueva_actividad .row-turnos {
+    margin: 5px;
+    text-transform: uppercase;
+    font-size: 11px;
+    padding: 0px 0px 5px 0px;
+}
+
+#nueva_actividad .cont-turnos {
+    /*background: red;*/
+    padding: 0px;
+    border-bottom: 1px solid #c7c7c7;
+    font-size: 12px;
     letter-spacing: 4px;
     font-family: monospace;
     color: grey;
 }
-.cont-funcionarios{padding-left: 7px;}
-.panel-turnos {padding: 5px;}
-.tbl_actividades {text-transform: uppercase; font-size: 11px;}
-.horario{font-weight: 600; font-size: 13px;}
-.glyphicon-earphone{padding-right: 5px;}
-.observaciones{border: none;
+
+#nueva_actividad .cont-funcionarios {
+    padding-left: 7px;
+}
+
+#nueva_actividad .panel-turnos {
+    padding: 5px;
+}
+
+#nueva_actividad .tbl_actividades {
+    text-transform: uppercase;
+    font-size: 11px;
+}
+
+#nueva_actividad .horario {
+    font-weight: 600;
+    font-size: 13px;
+}
+
+#nueva_actividad .glyphicon-earphone {
+    padding-right: 5px;
+}
+
+#nueva_actividad .observaciones {
+    border: none;
     font-style: oblique;
     text-transform: lowercase;
     background: #f3f3f3;
- }
-.tbl_trabajos{text-transform: uppercase; font-size: 11px;}
+}
 
-.buscador{width: 50%;}
-.organizacion{    position: relative;
+#nueva_actividad .tbl_trabajos {
+    text-transform: uppercase;
+    font-size: 11px;
+}
+
+#nueva_actividad .buscador {
+    width: 50%;
+}
+
+#nueva_actividad .organizacion {
+    position: relative;
     top: 7px;
     font-size: 15px;
     text-align: center;
@@ -92,85 +137,109 @@ body{font-size:12px;}
     padding: 4px;
 }
 
-#div_calendario{
-
-  text-align: center;
-  -webkit-text-align: center;  
-  -moz-text-align: center;
-  -ms-text-align: center;
-
-  padding: 15px;
-  -webkit-padding: 15px;
-  -moz-padding: 15px;
-  -ms-padding: 15px;
-
+#nueva_actividad #div_calendario {
+    text-align: center;
+    -webkit-text-align: center;
+    -moz-text-align: center;
+    -ms-text-align: center;
+    padding: 15px;
+    -webkit-padding: 15px;
+    -moz-padding: 15px;
+    -ms-padding: 15px;
 }
 
-#dependencia{padding:15px;}
-#segmentacion{visibility: hidden;}
+#nueva_actividad #dependencia {
+    padding: 15px;
+}
 
-  select.input-sm{
+#nueva_actividad #segmentacion {
+    visibility: hidden;
+}
+
+#nueva_actividad select.input-sm {
     text-transform: uppercase;
     font-size: 11px;
 }
 
-
-span.categoria{      font-size: 8px;
+#nueva_actividad #nueva_actividad span.categoria {
+    font-size: 8px;
     color: #fff;
     letter-spacing: 2px;
     padding: 3px;
-    text-transform: uppercase;}
-    p.text_subcategoria{margin-top:2px;}
-    i.text_segmentacion{font-size: 9px;}
+}
 
-.scrollbar{overflow: auto;
-max-height:  700px;}
+#nueva_actividad p.text_subcategoria {
+    margin-top: 2px;
+}
+
+#nueva_actividad i.text_segmentacion {
+    font-size: 9px;
+}
+
+#nueva_actividad .scrollbar {
+    overflow: auto;
+    max-height: 700px;
+}
+
+
 /* Let's get this party started */
 
-::-webkit-scrollbar {
-  width: 9px;
-  height: 9px;
-}
-::-webkit-scrollbar-button {
-  width: 0px;
-  height: 0px;
-}
-::-webkit-scrollbar-thumb {
-  background: #;D97F7F
-  border: 0px none #ffffff;
-  border-radius: 72px;
-}
-::-webkit-scrollbar-thumb:hover {
-  background: #c0c0c0;
-}
-::-webkit-scrollbar-thumb:active {
-  background: #808080;
-}
-::-webkit-scrollbar-track {
-  background: #dadada;
-  border: 0px none #ffffff;
-  border-radius: 50px;
-}
-::-webkit-scrollbar-track:hover {
-  background: #dadada;
-}
-::-webkit-scrollbar-track:active {
-  background: #dadada;
-}
-::-webkit-scrollbar-corner {
-  background: transparent;
+#nueva_actividad ::-webkit-scrollbar {
+    width: 9px;
+    height: 9px;
 }
 
-.cont-hora{    border: 1px solid #dadada;
-   /*padding: 3px;*/
+#nueva_actividad ::-webkit-scrollbar-button {
+    width: 0px;
+    height: 0px;
+}
+
+#nueva_actividad ::-webkit-scrollbar-thumb {
+    background: #D97F7F;
+    border: 0px none #ffffff;
+    border-radius: 72px;
+}
+
+#nueva_actividad ::-webkit-scrollbar-thumb:hover {
+    background: #c0c0c0;
+}
+
+#nueva_actividad ::-webkit-scrollbar-thumb:active {
+    background: #808080;
+}
+
+#nueva_actividad ::-webkit-scrollbar-track {
+    background: #dadada;
+    border: 0px none #ffffff;
+    border-radius: 50px;
+}
+
+#nueva_actividad ::-webkit-scrollbar-track:hover {
+    background: #dadada;
+}
+
+#nueva_actividad ::-webkit-scrollbar-track:active {
+    background: #dadada;
+}
+
+#nueva_actividad ::-webkit-scrollbar-corner {
+    background: transparent;
+}
+
+#nueva_actividad .cont-hora {
+    border: 1px solid #dadada;
+    /*padding: 3px;*/
     font-size: 12px;
     text-align: center;
     font-weight: 600;
     color: grey;
     border-radius: 2px;
     width: 12%;
-  float: left;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2);}
+    float: left;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2);
+}
+
+
 /*.cont-actividades{    width: 86%;
   
     float: left;
@@ -180,92 +249,146 @@ max-height:  700px;}
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2);
     margin-bottom: 17px;
 }*/
-.cont-actividades:hover {
+
+#nueva_actividad .cont-actividades:hover {
     background: #ffffd8;
     cursor: pointer;
 }
-.titulo{    border-bottom: 1px solid #bbbbbb;
+
+#nueva_actividad .titulo {
+    border-bottom: 1px solid #bbbbbb;
     margin-bottom: 6px;
-      width: 80%;}
+    width: 80%;
+}
 
 
 /* CSS by GenerateCSS.com */
-.cont-actividades ul {list-style-type: disc;
+
+#nueva_actividad .cont-actividades ul {
+    list-style-type: disc;
     padding: 14px;
-list-style-position: inside;}
+    list-style-position: inside;
+}
 
-.cont-actividades li {padding: 0px;
-margin: 0px;}
+#nueva_actividad .cont-actividades li {
+    padding: 0px;
+    margin: 0px;
+}
 
-.n_persns{width: 20%;
+#nueva_actividad .n_persns {
+    width: 20%;
     float: left;
     font-size: 12px;
     padding: 5px;
-    text-align:  center;
+    text-align: center;
     /* border: 1px solid #bbbbbb; */
     letter-spacing: 1px;
     font-weight: 600;
-    color: #848080;}
+    color: #848080;
+}
 
-    #det_actividad{padding: 0;}
-.detalle_titulo{
+#nueva_actividad #det_actividad {
+    padding: 0;
+}
+
+#nueva_actividad .detalle_titulo {
     padding: 5px;
     color: white;
     font-size: 20px;
-    text-transform: uppercase;}
-.fecha_seleccionada{color:#000; text-transform:lowercase; text-align: center;}
- .dia{font-size: 14px;}
- .mes{font-size: 14px;}   
- .num_dia{    font-size: 37px;
+    text-transform: uppercase;
+}
+
+#nueva_actividad .fecha_seleccionada {
+    color: #000;
+    text-transform: lowercase;
+    text-align: center;
+}
+
+#nueva_actividad .dia {
+    font-size: 14px;
+}
+
+#nueva_actividad .mes {
+    font-size: 14px;
+}
+
+#nueva_actividad .num_dia {
+    font-size: 37px;
     line-height: 0.8;
-    font-weight: 700;} 
-.det_fecha{background: #777777;
+    font-weight: 700;
+}
+
+#nueva_actividad .det_fecha {
+    background: #777777;
     color: white;
     padding: 4px;
     margin-top: 3px;
-    font-size: 13px;}
-.det_hora{padding-top: 15px;
+    font-size: 13px;
+}
+
+#nueva_actividad .det_hora {
+    padding-top: 15px;
     font-size: 20px;
-    font-weight: 600}
-.det_duracion{    background: #cac5c5;
+    font-weight: 600
+}
+
+#nueva_actividad .det_duracion {
+    background: #cac5c5;
     margin-top: 15px;
-    padding: 5px;}
-.num_duracion{    background: white;
+    padding: 5px;
+}
+
+#nueva_actividad .num_duracion {
+    background: white;
     text-align: center;
     padding: 0px;
-    font-weight: 600;}
-.dia_duracion{    color: white;
+    font-weight: 600;
+}
+
+#nueva_actividad .dia_duracion {
+    color: white;
     text-align: center;
-    padding: 3px 0px;}
-.fecha_duracion{    font-size: 11px;
+    padding: 3px 0px;
+}
+
+#nueva_actividad .fecha_duracion {
+    font-size: 11px;
     margin-top: 15px;
-    padding: 0px 0px 0px 4px;}    
-.cont-card{padding:5px;}
-.card{padding: 6px;
+    padding: 0px 0px 0px 4px;
+}
+
+#nueva_actividad .cont-card {
+    padding: 5px;
+}
+
+#nueva_actividad .card {
+    padding: 6px;
     background: white;
     min-height: 100px;
     margin-top: 5px;
-      overflow: auto;}
+    overflow: auto;
+}
 
-.card h1{margin-top: 8px;
+#nueva_actividad .card h1 {
+    margin-top: 8px;
     margin-bottom: 10px;
     color: #333;
     margin: 0 0 15px;
     line-height: 1.75rem;
     font-weight: 700;
-    font-size: 1.25rem;}
+    font-size: 1.25rem;
+}
 
-ul.fullstats {
+#nueva_actividad ul.fullstats {
     padding: 0;
     width: 100%;
-
     margin: 6px 0 0;
     border-top: 1px solid #e8e8e8;
     float: left;
     list-style-type: none;
 }
 
-ul.fullstats li {
+#nueva_actividad ul.fullstats li {
     width: 33.33333333%;
     float: left;
     text-align: center;
@@ -276,76 +399,94 @@ ul.fullstats li {
     padding: 11px 0;
 }
 
-ul.fullstats li:last-child { 
- border-right:  1px solid #e8e8e8;
- height: 100%;
+#nueva_actividad ul.fullstats li:last-child {
+    border-right: 1px solid #e8e8e8;
+    height: 100%;
 }
 
-ul.fullstats li span {
+#nueva_actividad ul.fullstats li span {
     display: block;
     font-size: 16px;
     line-height: 18px;
     color: #333;
 }
 
-.responsable{    text-transform: uppercase;
+#nueva_actividad .responsable {
+    text-transform: uppercase;
     font-family: monospace;
-    font-size: 13px;}
+    font-size: 13px;
+}
 
-.btn-group{float: right !important;}
+#nueva_actividad .btn-group {
+    float: right !important;
+}
 
-#tbl_calendarizacion{ max-height: 250px; overflow: auto; }
+#nueva_actividad #tbl_calendarizacion {
+    max-height: 250px;
+    overflow: auto;
+}
 
-#cont-det-actividades{display: none;}
+#nueva_actividad #cont-det-actividades {
+    display: none;
+}
 
-.titulo-trabajo{    text-transform: uppercase;
-    letter-spacing: 4px;}
+#nueva_actividad .titulo-trabajo {
+    text-transform: uppercase;
+    letter-spacing: 4px;
+}
 
-    .cont-trabajo{    border-bottom: 1px solid #bfbfbf;
+#nueva_actividad .cont-trabajo {
+    border-bottom: 1px solid #bfbfbf;
     overflow: auto;
     margin-bottom: 5px;
-    border-bottom-style: dashed;}
+    border-bottom-style: dashed;
+}
 
-    .body_actividades{ padding: 5px 0px;  }
-    #cont_list_actividades{padding: 0px 5px;}
+#nueva_actividad .body_actividades {
+    padding: 5px 0px;
+}
 
-    .panel-turnos .table{    text-transform: capitalize;}
+#nueva_actividad #cont_list_actividades {
+    padding: 0px 5px;
+}
 
-   tr.highlighted td {
+#nueva_actividad .panel-turnos .table {
+    text-transform: capitalize;
+}
+
+#nueva_actividad tr.highlighted td {
     background: #ffffd8;
 }
 
-#table_actividades{    
+#table_actividades {
     border: solid #ccc 1px;
     font-size: 10px;
     text-transform: uppercase;
     text-align: center;
-  }
-
-table#table_actividades th{
-   text-align: center;
-
 }
 
+#nueva_actividad table#table_actividades th {
+    text-align: center;
+}
 
-
-  .nombre_actividad {
+#nueva_actividad .nombre_actividad {
     font-size: 15px;
     font-style: oblique;
     text-transform: lowercase;
 }
 
-.button {
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
+#nueva_actividad .button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
 }
 
-#reg_asist 
-{border-radius: 50%;}
+#nueva_actividad #reg_asist {
+    border-radius: 50%;
+}
